# FTTC

./: README.md
Comparisons/ExampleOutput/: autocorrelationcompare.eps  autocorrelationcompare.gpt  wavefunctionsnapshots.eps  wavefunctionsnapshots.gpt
Comparisons/FTTCData/: wave.4  wave.6
Comparisons/FunctionTrainData/: wave.5  wave.7  xi
FTTC/: CMakeLists.txt  auxiliary.c  readme.txt
FTTC/ExampleOutput/: timings  wave.2
FTTCPython/: fttc.py  readme.txt
FTTCPython/ExampleOutput/: autocorrelation.eps  autocorrelation.gpt  norm.eps  norm.gpt  norm.npy  potential.npy  wave00.npy  wave100.npy  wave200.npy  wave300.npy  wave400.npy  wave500.npy  wave600.npy  xi.npy
FunctionTrain/: 2dpro.c  CMakeLists.txt  bessel.h
FunctionTrain/ExampleOutput/: norm  wave.1  wave.3
TT/: GnuplotConversion.m  KEKP.m  clencheb.m  psi0.m
TT/ExampleOutput/: resultofstep0.mat  resultofstep100.mat  resultofstep300.mat  resultofstep400.mat  resultofstepfinal.mat
TensorTrain/: PlotGc.m  PlotWp.m  Trotter.m  tt_CHEBSOFT.m  tt_FT.m
TensorTrain/ExampleOutput/: resultofstep200.mat  resultofstep500.mat  resultofstep600.mat
